--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -10,6 +10,40 @@ body {
   font-family: 'Rubik', sans-serif;
 }
 
+.display-form {
+  background: #fff;
+  width: 800px;
+  margin: 65px auto;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  border-radius: 4px;
+  box-shadow: 0 2px 25px rgba(0, 0, 0, 0.2);
+}
+
+.display-form h1 {
+	color: #85917d;
+}
+.display-form p {
+	color: #85917d;
+	margin: 3px auto;
+	font-size: 30px;
+}
+
+label {
+	color: #85917d;
+	margin: 3px auto;
+	font-size: 30px;
+	white-space: nowrap;
+}
+
+.display-form .content {
+  padding: 35px;
+  text-align: center;
+}
+
 .login-form {
   background: #fff;
   width: 500px;
@@ -106,3 +140,7 @@ body {
 .login-form .action button:nth-child(2):hover {
   background: #7ccc43;
 }
+
+
+
+
